[package]
name = "pv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
clap = "4.3.8"
libc = "0.2.142"
pnet = "0.33.0"
signal-hook = "0.3.15"
pnet_macros = "0.33.0"
pnet_macros_support = "0.33.0"
pnet_packet = "0.33.0"
num-traits = "0.2"
num-derive = "0.3"
