[package]
name = "pv"
version = "0.1.0"
license = "GPL-3.0+"

authors = ["arm@tsnlab.com", "pakji@tsnlab.com", "sik@tsnlab.com", "semih@tsnlab.com"]
description = "Packetvisor is a Raw Packet I/O framework based on the Rust language. It can process packets much faster than Standard Sockets through the Linux Kernel's eXpress Data Path(XDP)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
clap = "4.3.8"
libc = "0.2.142"
pnet = "0.33.0"
signal-hook = "0.3.15"
