[package]
name = "packetvisor"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0+"
authors = ["TSN Lab <cto@tsnlab.com>"]
description = "Packetvisor is a Raw Packet I/O framework based on the Rust language. It can process packets much faster than Standard Sockets through the Linux Kernel's eXpress Data Path(XDP)."
repository = "https://github.com/tsnlab/packetvisor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
name = "pv"

[build-dependencies]
bindgen = "0.65.1"
fs_extra = "1.3.0"

[dependencies]
clap = "4.3.8"
libc = "0.2.142"
pnet = "0.33.0"

[dev-dependencies]
signal-hook = "0.3.17"
